# Superacc_zkp

./: .gitignore  Cargo.toml  INVENTORY.md  LICENSE  README.md  RELEASE_NOTES.md  STRUCTURE_PLAN.md
docs/: architecture.md
experiments/: README.md  gcn_full_feature.rs
model_weights/: 2025-09-01_22-16-26_gcn_best_weights_f32.json  2025-09-01_22-16-27_gcn_best_weights_f64.json  gcn_weights_f32_20251106.json  gcn_weights_f64_20251106.json
pygcn_helper/: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
pygcn_helper/configs/: cora_full.yaml
pygcn_helper/docs/: training.md
pygcn_helper/scripts/: __init__.py  download_cora.py  export_weights.py  train_cora.py
pygcn_helper/src/pygcn_g/: __init__.py  data.py  export.py  models.py  training.py
src/: lib.rs  main.rs  types.rs
src/data/: loader.rs  mod.rs  pytorch_loader.rs
src/layers/: graph_conv.rs  mod.rs
src/math/: activations.rs  dense_ops.rs  mod.rs  sparse_ops.rs
src/models/: gcn.rs  mod.rs
src/zkp/: constraint_metrics.rs  mod.rs  operation_tracker.rs
src/zkp/prover/: fl2sa_utils.rs  layer1.rs  layer2.rs  layer3.rs  layer4.rs  mod.rs  sparse_product.rs
src/zkp/utils/: fl2sa.rs  linear.rs  mod.rs  mulfp.rs  sa2fl.rs  sparse.rs
src/zkp/verifiers/: common.rs  coordinator.rs  layer1.rs  layer2.rs  layer3.rs  layer4.rs  mod.rs
