[metadata]
name = pygcn-g
version = 0.1.0
description = Training utilities for exporting GCN weights compatible with Superacc ZKP.
long_description = file: README.md
long_description_content_type = text/markdown
author = Superacc ZKP Authors
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    torch>=2.5.1
    numpy>=1.24.0
    scipy>=1.10.0

[options.packages.find]
where = src
